Start getting the tests to work.
Change memory settings for unit tests.
Remove use of some deprecated APIs.
Change named queries using ordinal parameters.